@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.5 2004/07/03 02:08:02 xtraeme Exp $
+$NetBSD: distinfo,v 1.6 2004/08/04 06:16:04 xtraeme Exp $
 
-SHA1 (mips64emul-0.1.1.tar.gz) = 86383858638985e7c84160a621aa7b76e8f359ac
-Size (mips64emul-0.1.1.tar.gz) = 385438 bytes
+SHA1 (mips64emul-0.2.tar.gz) = 8c451ca2877815a778fc23ed8bba971c61a983fb
+Size (mips64emul-0.2.tar.gz) = 634922 bytes
